--- a/Dockerfile.tmpl
+++ b/Dockerfile.tmpl
@@ -26,7 +26,7 @@ ADD templates /app/templates
 WORKDIR /app
 COPY    --from=build-env /src/docker-demo /app/
 
-EXPOSE EXPOSE_PORT
+EXPOSE 80
 ENTRYPOINT ["/app/docker-demo"]
-CMD ["-listen=:EXPOSE_PORT"]
+CMD ["-listen=:80"]
 
